# XxwScript

./: .gitignore  CLAUDE.md  README.md  README_WINDOWS.md  build.bat  pyproject.toml  requirement.txt
aftersale_exporter/: AGENTS.md  __init__.py  __main__.py  api.py  cli.py  curl_template.py  job.py  merge.py  progress.py  workflow.py
docs/superpowers/plans/: 2026-05-07-daily-count-remediation.md
tests/: test_api.py  test_cli.py  test_curl_template.py  test_job.py  test_merge.py  test_progress.py  test_workflow.py
