[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aftersale-exporter"
version = "0.1.0"
description = "Binary-splitting exporter for Douyin aftersale exports."
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.5",
  "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[tool.setuptools.packages.find]
include = ["aftersale_exporter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
